Migrate settings to kotlin